# fluentci-demo-rust

./: Cargo.toml  README.md
.fluentci/: fluentci.toml
.github/workflows/: ci.yml
migrations/: 20240823085526_create_items_table.sql
src/: lib.rs  main.rs
tests/: e2e.rs
